--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@auth0/nextjs-auth0": "1.0.0",
     "faunadb": "^4.4.1",
     "next": "^11.1.2",
+    "nodemailer": "^6.6.3",
     "nprogress": "^0.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
